--- a/cusat_club_website/src/arrow.css
+++ b/cusat_club_website/src/arrow.css
@@ -26,9 +26,24 @@
 	line-height: 30px;
 	font-weight: bold;
 	color: #1B2F5B;
-	margin-left: 37px;
+	margin-left: 40px;
 }
 
 .links:hover {
 	color: rgb(22, 165, 150);
+	border-bottom: 3px solid rgb(22, 165, 150);
 }
+
+#past:hover {
+	
+	opacity: 0.6;
+}
+
+.club {
+	color: black;
+}
+
+/* .horizontal-line { 
+	border-bottom: 3px solid  #FF0000; 
+} */
+
