--- a/cusat_club_website/src/arrow.css
+++ b/cusat_club_website/src/arrow.css
@@ -46,6 +46,37 @@
 	color: rgb(22, 165, 150);
 	border-bottom: 3px solid rgb(22, 165, 150);
 }
+.dot {
+	position: relative;
+	height: 40px;
+	width: 40px;
+	background-color: rgb(22, 165, 150);
+	border-radius: 50%;
+	display: inline-block;
+	margin-right: 15px;
+  }
+
+  .img {
+	position: relative;
+	top: 10px;
+	left: 11px;
+  }
+  .img.img1 {
+	  top: 7px;
+	  left: 7px;
+  }
+  .img.img2 {
+	top: 8px;
+	left: 8px;
+}
+
+.img3 {
+	position: relative;
+	top: 8px;
+	left: 8px;
+	width: 25px;
+	height: 25px;
+}
 
 #past:hover {
 	
