Updated: arrow.css for carousel

--- a/src/arrow.css
+++ b/src/arrow.css
@@ -182,7 +182,7 @@
 	top: 5px;
 }
 
-.lcUbOd {
+.bBjxWM {
 	background-color: #16A596 !important;
 	box-shadow: none !important;
 	height: 15px !important;
