Updated: arrow.css for carousel in event page

--- a/src/arrow.css
+++ b/src/arrow.css
@@ -189,27 +189,27 @@
 	width: 54px !important;
 	border-radius: 120px !important;
   }
-  .eaptOe {
+  .gpDNSX {
 	box-shadow: 0 0 1px 2px #16A596 !important;
 	height: 13px !important;
 	width: 13px !important;
 	margin-top: 6px !important;
   }
   
-  .cNNJIt {
+  .fViXLK {
 	background-color: white !important;
 	box-shadow: none !important;
 	color: #333 !important;
 	/* display: none; */
   }
   
-  .jRFJkP {
+  .fVgyLU {
 	background-color: white !important;
 	box-shadow: none !important;
 	/* display: none; */
   }
   
-  .jRFJkP:hover {
+  .fVgyLU:hover {
 	color: #16A596 !important;
   }
 
