Updated: Bug fix in upcoming and past events in home and events page

--- a/src/arrow.css
+++ b/src/arrow.css
@@ -182,34 +182,34 @@
 	top: 5px;
 }
 
-.bBjxWM {
+.lcUbOd {
 	background-color: #16A596 !important;
 	box-shadow: none !important;
 	height: 15px !important;
 	width: 54px !important;
 	border-radius: 120px !important;
   }
-  .gpDNSX {
+  .eaptOe {
 	box-shadow: 0 0 1px 2px #16A596 !important;
 	height: 13px !important;
 	width: 13px !important;
 	margin-top: 6px !important;
   }
   
-  .fViXLK {
+  .cNNJIt {
 	background-color: white !important;
 	box-shadow: none !important;
 	color: #333 !important;
 	/* display: none; */
   }
   
-  .fVgyLU {
+  .jRFJkP {
 	background-color: white !important;
 	box-shadow: none !important;
 	/* display: none; */
   }
   
-  .fVgyLU:hover {
+  .jRFJkP:hover {
 	color: #16A596 !important;
   }
 
